# hyprshell

./: flake.nix
config/: ServiceConfig.qml  UserPaths.qml
modules/background/: Background.qml
modules/bar/: Bar.qml
modules/bar/components/: Clock.qml  DateWidget.qml  TerminalWidget.qml
modules/dashboard/: Media.qml
modules/dashboard/dash/: Media.qml
modules/drawers/: Backgrounds.qml  Drawers.qml  Panels.qml
modules/session/: Content.qml
modules/sidebar/: NotifDock.qml
nix/: default.nix
plugin/src/Caelestia/: CMakeLists.txt
plugin/src/Caelestia/Terminal/: CMakeLists.txt  pty.cpp  pty.hpp  terminalstate.cpp  terminalstate.hpp  terminalview.cpp  terminalview.hpp
